update: updates java to 17 and all dependencies to latest.